# CNTK

./: .gitattributes  .gitignore  CNTK.sln  Makefile  configure
Source/CNTKv2LibraryDll/proto/onnx/: CNTKToONNX.cpp
Tests/UnitTests/V2LibraryCSTests/: V2LibraryCSTests.csproj
Tools/cmake/: cpp_common.cmake  csharp_common.cmake
bindings/csharp/CNTKLibraryManagedDll/: CMakeLists.txt  CNTKLibraryManagedDll.csproj
bindings/csharp/Swig/: CMakeLists.txt  CNTKLibraryCSBinding.vcxproj
